--- a/css/style.css
+++ b/css/style.css
@@ -9,32 +9,44 @@ body{
 }
 
 .header{
-    font-size: 40px;
-    color: whitesmoke;
-    font-family: cursive;
-
     top: 0px;
     position: absolute;
 
     height: 10%;
     width: 100%;
-
-    vertical-align: middle;
-    padding: 0px 50px;
     box-shadow: 0 4px 8px 0 black, 0 6px 20px 0 black;
 }
 
-.footer{
-    font-size: 15px;
+#head-text{
     color: whitesmoke;
     font-family: cursive;
-    text-align: center;
+    text-align: left;
+    font-size: 40px;
+
+    position: absolute;
+    top: -30px;
+    left: 30px;
+}
+
+.footer{
     bottom: 0px;
     position: absolute;
 
     height: 4%;
     width: 100%;
     box-shadow: 0 4px 8px 0 black, 0 6px 20px 0 black;
+}
+
+#foot-text{
+    color: whitesmoke;
+    font-family: cursive;
+    font-family: monospace;
+    text-align: left;
+
+    width: 100%;
+    position: absolute;
+    bottom: -6px;
+    text-align: center;
 }
 
 form {
@@ -73,3 +85,10 @@ button:hover {
     padding: 16px;
 }
 
+.unselectable {
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-o-user-select: none;
+user-select: none;
+}
