--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,27 @@ body{
     margin: 0px;
     overflow: hidden;
     background-image: url(../images/login-bg.jpg);
-    background-color: #fefefe;
     background-size: cover;
     background-attachment: fixed;
+}
+
+.step-one{
+    background-color: rgba(0,0,0,1);
+    position: relative;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.step-two{
+    position: relative;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .header{
